# staffbook

./: .gitignore  CMakeLists.txt  README.md  add_employee.cc  common.cmake  list_employees.cc  query_employee.cc  staffbook.proto  staffbook_client.cc  staffbook_server.cc
